warning suppression and update font